linked destination page to the home

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             <li><a href="#">Home</a></li>
             <li>
               <a href="#">Pages</a>
-              <i class="bx bxs-chevron-down about-arrow arrow"></i>
-              <ul class="about-sub-menu sub-menu">
+              <!-- <i class="bx bxs-chevron-down about-arrow arrow"></i> -->
+              <!-- <ul class="about-sub-menu sub-menu">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Our Team</a></li>
                 <li><a href="#">Team Carousel</a></li>
-              </ul>
+              </ul> -->
             </li>
-            <li><a href="#">Destination</a></li>
+            <li><a href="/destination.html">Destination</a></li>
             <li><a href="#">Villa</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="#">News</a></li>
