--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="links">
             <li><a href="#">Home</a></li>
             <li>
-              <a href="#">Pages</a>
+              <a href="#">About</a>
               <!-- <i class="bx bxs-chevron-down about-arrow arrow"></i> -->
               <!-- <ul class="about-sub-menu sub-menu">
                 <li><a href="#">About</a></li>
